# Encoder

./: CMakeLists.txt
database_driver/: dbconfig.h  dbdriver.cpp  dbdriver.h
inc/: mainwindow.h  signindialog.h  signupdialog.h
src/: main.cpp  mainwindow.cpp  signindialog.cpp  signupdialog.cpp
